feat: [08] Desarrollo del Controller y gestión de excepciones
